fix: estimatedDuration 누락 수정